[package]
name = "bodyguard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "json"]}
tower-http = {version = "0.4.3", features = ["util", "trace"]}
tower = {version = "0.4.13", features = ["make"]}
hyper = {version = "0.14.27", features = ["full"]}

